kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-web
  namespace: flux-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http-web # Ensure this matches your Gateway listener name
  hostnames: ["flux.${SECRET_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
